# shank

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLE_USAGE.md  README.md  release.toml
shank/: Cargo.toml  README.md
shank-cli/: Cargo.toml  README.md
shank-cli/src/: lib.rs
shank-idl/: ACCOUNTS_STRUCT_IDL.md  Cargo.toml  README.md
shank-idl/src/: accounts_extraction.rs  file.rs  idl.rs  idl_error_code.rs  idl_field.rs  idl_instruction.rs  idl_metadata.rs  idl_type.rs  idl_type_definition.rs  idl_variant.rs  lib.rs  manifest.rs
shank-idl/tests/: accounts.rs  errors.rs  generate_expected_idl.rs  instructions.rs  macros.rs  test_shank_accounts_expansion.rs  types.rs
shank-idl/tests/fixtures/accounts/sample_crate/: Cargo.toml  idl.json
shank-idl/tests/fixtures/accounts/single_file/: account.json  complex_types.json  complex_types.rs  field_attributes.json  field_attributes.rs  idl.json  idl_type.json  idl_type.rs  padding.json  padding.rs  pod_option_enum_sentinel.rs  pod_option_missing_sentinel.rs  podded_types.json  podded_types.rs  shank_as.json  shank_as.rs
shank-idl/tests/fixtures/errors/: this_error.json  this_error.rs  this_error_custom_codes.json  this_error_custom_codes.rs
shank-idl/tests/fixtures/instructions/single_file/: create_idl_instructions.json  create_idl_instructions.rs  create_idl_instructions_u64.json  create_idl_instructions_u64.rs  create_idl_instructions_with_offset.json  create_idl_instructions_with_offset.rs  instruction_invalid_attr.rs  instruction_invalid_discriminant.rs  instruction_no_args.json  instruction_no_args.rs  instruction_with_accounts_struct.json  instruction_with_accounts_struct.rs  instruction_with_args.json  instruction_with_args.rs  instruction_with_complex_accounts_struct.json  instruction_with_complex_accounts_struct.rs  instruction_with_docs.json  instruction_with_docs.rs  instruction_with_multiple_args.json  instruction_with_multiple_args.rs  instruction_with_optional_account.json  instruction_with_optional_account.rs  instruction_with_optional_account_defaulting.json  instruction_with_optional_account_defaulting.rs  instruction_with_optional_signer_account.json  instruction_with_optional_signer_account.rs  (+4 more)
shank-idl/tests/fixtures/macros/: program_id_missing.json  program_id_missing.rs  program_id_valid.json  program_id_valid.rs
shank-idl/tests/fixtures/types/: invalid_single.rs  padding.json  padding.rs  valid_multiple.json  valid_multiple.rs  valid_multiple_maps.json  valid_multiple_maps.rs  valid_multiple_sets.json  valid_multiple_sets.rs  valid_multiple_tuples.json  valid_multiple_tuples.rs  valid_single.rs  valid_single_data_enum.json  valid_single_data_enum.rs  valid_single_enum.json  valid_single_enum.rs  valid_single_enum_shank_type.rs  valid_single_struct.json  valid_single_struct_shank_type.json  valid_single_struct_shank_type.rs
shank-macro/: Cargo.toml  README.md  rustfmt.toml
shank-macro-impl/: Cargo.toml  README.md  account_disc.md
shank-macro-impl/src/: converters.rs  lib.rs  parse_result.rs
shank-macro-impl/src/account/: account.rs  account_test.rs  extract_accounts.rs  mod.rs
shank-macro-impl/src/accounts/: account_field.rs  account_field_ty.rs  account_struct.rs  accounts_test.rs  mod.rs  parsed_accounts.rs
shank-macro-impl/src/builder/: argument.rs  argument_test.rs  builder.rs  builder_test.rs  mod.rs
shank-macro-impl/src/custom_type/: custom_enum.rs  custom_struct.rs  custom_type_config.rs  mod.rs
shank-macro-impl/src/error/: mod.rs  program_error.rs  this_error.rs
shank-macro-impl/src/instruction/: account_attrs.rs  account_attrs_test.rs  extract_instructions.rs  idl_instruction_attrs.rs  instruction.rs  instruction_test.rs  mod.rs  strategy_attrs.rs  strategy_attrs_test.rs
shank-macro-impl/src/ix_accounts/: account_field.rs  account_field_ty.rs  accounts.rs  common.rs  mod.rs
shank-macro-impl/src/krate/: crate_context.rs  mod.rs  module_context.rs
shank-macro-impl/src/macros/: mod.rs  program_id.rs
shank-macro-impl/src/parsed_enum/: mod.rs  parsed_enum.rs  parsed_enum_variant.rs
shank-macro-impl/src/parsed_macro/: mod.rs  parsed_macro.rs
shank-macro-impl/src/parsed_struct/: mod.rs  parsed_struct.rs  parsed_struct_test.rs  seed.rs  struct_attr.rs  struct_field_attr.rs
shank-macro-impl/src/parsers/: attrs.rs  mod.rs
shank-macro-impl/src/types/: mod.rs  parsed_reference.rs  render_rust_ty.rs  resolve_rust_ty.rs  rust.rs  traits.rs  type_kind.rs
shank-macro-impl/src/types/type_kind/: composite.rs  mod.rs  primitive.rs  value.rs
shank-macro/src/: account.rs  accounts.rs  builder.rs  context.rs  instruction.rs  lib.rs
shank-render/: Cargo.toml
shank-render/src/: consts.rs  lib.rs  process_seeds.rs  render_pda.rs  render_seeds.rs
shank-render/src/builder/: mod.rs  render_builders.rs
shank-render/src/context/: mod.rs  render_context.rs
shank-render/src/pda/: mod.rs  pda_common.rs  render_pda.rs  render_seeds.rs
shank-render/tests/: mod.rs  render_pda_fn.rs  render_seeds_fn.rs
shank-render/tests/pda/: mod.rs  render_impl.rs  render_pda_fn.rs  render_seeds_fn.rs
shank-render/tests/utils/: mod.rs
shank/examples/: accounts_struct_example.rs  anchor_style_example.rs  context_usage_example.rs  full_solana_example.rs
shank/src/: context.rs  lib.rs
shank/tests/: accounts_macro_test.rs  basic_context_test.rs  context_api_test.rs  context_api_working_test.rs  context_generation_test.rs  context_issue_demo.rs  context_method_demo.rs  context_method_test.rs  context_runtime_test.rs  context_usage_test.rs  enhanced_accounts_test.rs  error_handling_test.rs  expand_tests.rs  final_context_test.rs  idl_generation_test.rs  instruction_integration_test.rs  instruction_with_accounts_struct_test.rs  simple_context_test.rs  working_context_demo.rs
shank/tests/expand/: basic_accounts.expanded.rs  basic_accounts.rs  complex_constraints.expanded.rs  complex_constraints.rs  custom_lifetime.expanded.rs  custom_lifetime.rs  empty_struct.expanded.rs  empty_struct.rs  no_constraints.expanded.rs  no_constraints.rs  optional_accounts.expanded.rs  optional_accounts.rs
(+12 files in other folders)
