[package]
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
description = "Shank CLI that extracts solita compatible IDL from your Rust Solana program code annotated with shank macro attributes"
edition = "2018"
license = "Apache-2.0"
name = "shank-cli"
repository = "https://github.com/metaplex-foundation/shank"
version = "0.4.2"

[[bin]]
name = "shank"
path = "src/bin/main.rs"


[dependencies]
anyhow = "1.0.48"
clap = { version = "3.0.14", features = ["derive"] }
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
shank_idl = { version = "0.4.2", path = "../shank-idl" }
