[package]
name = "shank-cli"
description = "Shank CLI that extracts solita compatible IDL from your Rust Solana program code annotated with shank macro attributes"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/shank"
license = "Apache-2.0"
version = "0.4.4"
edition = "2018"

[[bin]]
name = "shank"
path = "src/bin/main.rs"


[dependencies]
anyhow = "1.0.48"
clap = { version = "3.0.14", features = ["derive"] }
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
shank_idl = { version= "0.4.4", path = "../shank-idl" }
