[package]
name = "shank_idl"
version = "0.0.1"
description = "Converts information extracted via shank derive macros to a solita compatible IDL."
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/shank"
license = "Apache-2.0"
edition = "2018"

[dependencies]
shellexpand = "2.1.0"
shank_macro_impl = { version = "0.0.1", path = "../shank-macro-impl" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
anyhow = "1.0.48"
cargo_toml = "0.10.1"
heck = "0.3.3"
