[package]
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
description = "Converts information extracted via shank derive macros to a solita compatible IDL."
edition = "2018"
license = "Apache-2.0"
name = "shank_idl"
repository = "https://github.com/metaplex-foundation/shank"
version = "0.5.0"

[dependencies]
anyhow = "1.0.48"
cargo_toml = "0.17"
heck = "0.3.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
shank_macro_impl = { version = "0.5.0", path = "../shank-macro-impl" }
shellexpand = "2.1.0"
