[package]
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
description = "Implements and tests shank derive macros"
edition = "2018"
license = "Apache-2.0"
name = "shank_macro_impl"
repository = "https://github.com/metaplex-foundation/shank"
version = "0.4.3-alpha.1"

[dependencies]
anyhow = "1.0.48"
proc-macro2 = "1.0.32"
quote = "1.0.21"
serde = { version = "1.0.130", features = ["derive"] }
syn = { version = "1.0.82", features = ["extra-traits", "full"] }

[dev-dependencies]
assert_matches = "1.5.0"
