[package]
name = "shank_macro_impl"
version = "0.4.3"
description = "Implements and tests shank derive macros"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/shank"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.48"
proc-macro2 = "1.0.32"
quote = "1.0.21"
serde = { version = "1.0.130", features = ["derive"] }
syn = { version = "1.0.82", features = ["extra-traits", "full"] }

[dev-dependencies]
assert_matches = "1.5.0"
