[package]
name = "shank_macro"
version = "0.0.9"
description = "Provides macros used to annotate Solana Rust programs in order to extract an IDL with the shank CLI"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/shank"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true
doctest = false

[dependencies]
shank_macro_impl = { version = "0.0.9", path = "../shank-macro-impl" }
shank_render = { version = "0.0.1", path = "../shank-render" }
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = "1.0.82"
