[package]
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
description = "Provides macros used to annotate Solana Rust programs in order to extract an IDL with the shank CLI"
edition = "2018"
license = "Apache-2.0"
name = "shank_macro"
repository = "https://github.com/metaplex-foundation/shank"
version = "0.4.3-alpha.1"

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
shank_macro_impl = { version = "0.4.3-alpha.1", path = "../shank-macro-impl" }
shank_render = { version = "0.4.3-alpha.1", path = "../shank-render" }
syn = "1.0.82"

[features]
default = ["solana-program"]
pinocchio = ["shank_render/pinocchio"]
solana-program = ["shank_render/solana-program"]
