[package]
name = "shank"
description = "Exposes macros to annotate Rust programs to extract solita compatible IDL in order to generate program SDKs"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/shank"
license = "Apache-2.0"
version = "0.0.1"
edition = "2018"


[dependencies]
shank_macro = { version = "0.0.1", path = "../shank-macro" }
