[package]
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
description = "Exposes macros to annotate Rust programs to extract solita compatible IDL in order to generate program SDKs"
edition = "2018"
license = "Apache-2.0"
name = "shank"
repository = "https://github.com/metaplex-foundation/shank"
version = "0.4.2"

[features]
default = ["solana-program"]
pinocchio = ["shank_macro/pinocchio"]
solana-program = ["shank_macro/solana-program"]

[dependencies]
shank_macro = { version = "0.4.2", path = "../shank-macro" }
