[package]
name = "shank"
description = "Exposes macros to annotate Rust programs to extract solita compatible IDL in order to generate program SDKs"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/shank"
license = "Apache-2.0"
version = "0.4.5"
edition = "2018"


[dependencies]
shank_macro = { version = "0.4.5", path = "../shank-macro" }
solana-program = { version = "1.18", optional = true }

[dev-dependencies]
macrotest = "1.0"

[features]
default = []
solana-program = ["dep:solana-program"]
